--- a/ardupilot/Dockerfile
+++ b/ardupilot/Dockerfile
@@ -13,7 +13,10 @@ ARG PLATFORM
 ARG VEHICLETYPE
 ENV PLATFORM=${PLATFORM:-$TARGETARCH}
 ENV TARGETARCH=$TARGETARCH
-ENV VEHICLETYPE=${VEHICLETYPE}
+ENV VEHICLETYPE=${VEHICLETYPE:-Sub}
+
+RUN echo "Platform: ${PLATFORM} ${TARGETARCH}"
+RUN echo "VehicleType: ${VEHICLETYPE}"
 
 RUN if [ "${PLATFORM}" = "x86_64" ]; then \
         echo "SITL_x86_64_linux_gnu" > /arch; \
