--- a/linux2rest/Dockerfile
+++ b/linux2rest/Dockerfile
@@ -15,7 +15,7 @@ ENV TARGETARCH=$TARGETARCH
 
 RUN echo "Platform: ${PLATFORM} ${TARGETARCH}"
 
-RUN if [ "${PLATFORM}" = "x86_64" ]; then \
+RUN if [ "${PLATFORM}" = "amd64" ]; then \
         curl -L -o /usr/local/bin/linux2rest https://github.com/patrickelectric/linux2rest/releases/download/v0.6.0/linux2rest-x86_64-unknown-linux-gnu; \
     elif [ "${PLATFORM}" = "arm" ]; then \
         curl -L -o /usr/local/bin/linux2rest https://github.com/patrickelectric/linux2rest/releases/download/v0.6.0/linux2rest-armv7-unknown-linux-gnueabihf; \
