ardupilot: Fix default VEHICLETYPE
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/ardupilot/Dockerfile
+++ b/ardupilot/Dockerfile
@@ -13,7 +13,7 @@ ARG PLATFORM
 ARG VEHICLETYPE
 ENV PLATFORM=${PLATFORM:-$TARGETARCH}
 ENV TARGETARCH=$TARGETARCH
-ENV VEHICLETYPE=${VEHICLETYPE:-Sub}
+ENV VEHICLETYPE=${VEHICLETYPE:-sub}
 
 RUN echo "Platform: ${PLATFORM} ${TARGETARCH}"
 RUN echo "VehicleType: ${VEHICLETYPE}"
