mavlogdump: Add first version
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,15 @@ services:
     depends_on:
       - ardupilot
 
+  mavlogdump:
+    build: ./mavproxy/
+    network_mode: "host"
+    entrypoint: "/usr/local/bin/mavlogdump.py"
+    volumes:
+      - type: bind
+        source: ./
+        target: /binded/
+
   linux2rest:
     build: ./linux2rest/
     profiles: [linux2rest]
