compose: Add missing profile for mavlogdump
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/compose.yml
+++ b/compose.yml
@@ -28,6 +28,7 @@ services:
 
   mavlogdump:
     build: ./mavproxy/
+    profiles: [mavlogdump]
     network_mode: "host"
     entrypoint: "/usr/local/bin/mavlogdump.py"
     volumes:
